--- a/package.json
+++ b/package.json
@@ -1,6 +1,15 @@
 {
+  "name": "mongoose",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.ts",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "@hapi/boom": "^10.0.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongoose": "^7.3.1",
